@@ -9,7 +9,7 @@ Description: Routines for GAMs and other generalized ridge regression
              function.
 Priority: recommended
 Depends: R (>= 2.3.0)
-Imports: graphics, stats, nlme
-Suggests: nlme (>= 3.1-64), splines
+Imports: graphics, stats, nlme, Matrix
+Suggests: nlme (>= 3.1-64), splines, Matrix
 LazyLoad: yes
 License: GPL (>=2)
