@@ -1032,7 +1032,7 @@ gamm <- function(formula,random=NULL,correlation=NULL,family=gaussian(),data=lis
     object<-list(model=mf,formula=formula,smooth=G$smooth,nsdf=G$nsdf,family=family,
                  df.null=nrow(G$X),y=G$y,terms=gam.terms,pterms=pTerms,xlevels=G$xlevels,
                  contrasts=G$contrasts,assign=G$assign,na.action=attr(mf,"na.action"),
-                 cmX=G$cmX,var.summary=G$var.summary)
+                 cmX=G$cmX,var.summary=G$var.summary,scale.estimated=TRUE)
     # Transform  parameters back to the original space....
     bf<-as.numeric(ret$lme$coefficients$fixed)
     br<-as.numeric(unlist(ret$lme$coefficients$random))
